[package]
name = "cef"
version = "117.2.5"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Use cef in Rust"

[features]
dox = ["cef-sys/dox"]

[package.metadata.docs.rs]
features = [ "dox" ]

[workspace]
members = [
 "sys",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cef-sys = { package = "libcef-sys", version = "117.2.5", path = "sys" }
widestring = "1.0"

[dev-dependencies]
winit = "0.28"

