[workspace]
resolver = "2"

members = [
    "cef",
    "sys",
    "update-bindings",
]

[workspace.package]
version = "131.3.4"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = [
    "Wu Yu Wei <yuweiwu@pm.me>",
    "Bill Avery <wravery@gmail.com>",
]
repository = "https://github.com/wusyong/cef-rs"

[workspace.dependencies]
cef-sys = { package = "libcef-sys", version = "131.3.4", path = "sys" }
winit = "0.30"

