[package]
name = "cef"
description = "Use cef in Rust"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
dox = ["cef-sys/dox"]

[package.metadata.docs.rs]
features = [ "dox" ]

[dependencies]
cef-sys.workspace = true
widestring.workspace = true

[dev-dependencies]
winit.workspace = true

