[package]
name = "libcef-sys"
version = "131.3.4"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Wu Yu Wei <yuweiwu@pm.me>"]
description = "cef-rs sys crate"
repository = "https://github.com/wusyong/cef-rs"

[lib]
name = "cef_sys"
doctest = false

[features]
dox = []

[package.metadata.docs.rs]
features = [ "dox" ]

[dependencies]

[dev-dependencies]
winit = "0.28"
